
	* inst/include/Rcpp/Date.h (Rcpp): Dates are now represented as
	doubles, also added accessor functions for double and retained int

	* src/Date.cpp (Rcpp): Convert from SEXP to double, added constructor
	from double and added checks for 'finite' representation before
	converting to 'struct tm' adding support for NA, NaN and Inf

	* src/DateVector.cpp: Instantiate Date types as double

2012-10-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/exceptions.cpp: Applied patch by Martin Morgan which untangles
	the clang includes driven by version, and uses direct tests for
	presence of the header file
	* inst/include/RcppCommon.h: No longer define CLANG version meta
	variables as we can directly include the relevant header

2012-09-30  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.14
        * inst/NEWS: Release 0.9.14
        * inst/include/Rcpp/config.h: Release 0.9.14
        * debian/*: Similarly updated for new release to Debian

2012-09-08  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.sugarOps.R: More sugar Ops unit tests

2012-09-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.sugarOps.R: (Incomplete) beginnings of new
	unit test file for sugar operations on vectors and matrices

2012-09-07  Romain Francois  <romain@r-enthusiasts.com>

	* inst/include/Rcpp/sugar/functions/sign.h: Sign gets a SEXP operator

2012-09-03  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/sugar/functions/math.h: Added new sugar
	function trunc(), round() and signif()
	* inst/unitTests/runit.sugar.R: Added unit tests for these

2012-09-01  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Makefile: The 'all' target is now empty to prevent
	autobuilders such as R-Forge from falling over

2012-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* R/bib.R: Trim the trailing ".bib" from the generated bibtex
	filename as Windows adds one anyway leading to two and an error

2012-07-21  Dirk Eddelbuettel  <edd@debian.org>
